--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,4 +62,25 @@ nav{
     font-weight: bold;
     padding: 0px 16px;
 }
+.about {
+    width: 100%;
+    height: 720px;
+    background: url(../img/foto.jpg) 50% 20%/auto auto no-repeat, #fcfdfd;
+    
+}
+.about h2{
+    margin: 107px 0px 0px 885px;
+    font-family: "Arial", sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #263244;
+}
+.about img {
+  margin-top: 31px; 
+  margin-left: 910px;
+margin-bottom: 60px;
+}
+.about p{
+    margin: 450px auto auto 595px; 
+}
 
