--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,22 +65,48 @@ nav{
 .about {
     width: 100%;
     height: 720px;
-    background: url(../img/foto.jpg) 50% 20%/auto auto no-repeat, #fcfdfd;
+    background-color: #fcfdfd;
     
 }
-.about h2{
-    margin: 107px 0px 0px 885px;
+.aboutMe{
+    padding-top: 107px;
+    text-align: center;
     font-family: "Arial", sans-serif;
     font-size: 25px;
     font-weight: bold;
     color: #263244;
 }
-.about img {
-  margin-top: 31px; 
-  margin-left: 910px;
-margin-bottom: 60px;
+.about-line{
+    display: block;
+    margin-top: 33px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
-.about p{
-    margin: 450px auto auto 595px; 
+.about-foto{
+    display: block;
+    margin-top: 64px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.about p{
+    margin-top: 27px;
+    text-align: center;
+    font-family: "Calibri", sans-serif;
+    font-size: 20px; 
+    color: #3f495a;
+}
+.about input{
+    display: block;
+    line-height 35px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-size: 25px;
+    color: #7b7c88;
+    margin: 60px auto 0px auto;
+    padding-left: 35px;
+    padding-right: 15px;
+    background-image: url(../img/icon.png) 10% 10% no-repeat;
+    border: 2px solid;
+    border-radius: 5px;
+}
