--- a/src/css/style.css
+++ b/src/css/style.css
@@ -68,7 +68,7 @@ nav{
     background-color: #fcfdfd;
     
 }
-.aboutMe{
+.header{
     padding-top: 107px;
     text-align: center;
     font-family: "Arial", sans-serif;
@@ -76,7 +76,7 @@ nav{
     font-weight: bold;
     color: #263244;
 }
-.about-line{
+.underline{
     display: block;
     margin-top: 33px;
     margin-left: auto;
@@ -99,6 +99,7 @@ nav{
 }
 .about input{
     display: block;
+    background: none;
     line-height 35px;
     font-family: "Franklin Gothic Medium", sans-serif;
     font-size: 25px;
@@ -106,7 +107,241 @@ nav{
     margin: 60px auto 0px auto;
     padding-left: 35px;
     padding-right: 15px;
-    background-image: url(../img/icon.png) 10% 10% no-repeat;
+    background: url(../img/icon.png) 5% 50%/auto 70% no-repeat;
     border: 2px solid;
     border-radius: 5px;
 }
+.skills{
+    width: 100%;
+    height: 520px;
+    background: url(../img/bg-skills.jpg) no-repeat;
+}
+.skills-ul{
+    float: left;
+    margin-top: 80px;
+    padding-left: 416px; 
+}
+.skills-ul li{
+    text-align: center;
+    width: 220px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-size: 14px;
+    color: #626a77;
+    float: left;
+    margin-right: 80px;
+}
+.skills-ul li h2{
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    color: #cf7600;
+}  
+
+.examples{
+    width: 100%;
+    height: 1120px;
+}
+.examples p{
+    font-family: "Calibri", sans-serif;
+}
+
+.pText{
+    text-align: center;
+    margin-top: 40px;
+    color: #3f495a;
+    font-size: 20px;
+}
+.workplace{
+    display: block;
+    margin: 40px auto 0px auto;
+    height: 590px;
+}
+
+.client{
+    margin-left: 380px;
+    margin-top: 40px;
+    padding-right: 165px;
+    color: #384354;
+   float: left;
+    
+}
+
+.client h3{
+    font-size: 18px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    margin-bottom: 16px;
+    font-weight: bold;
+    
+}
+.project_title{
+    margin-top: 40px;
+    color: #384354;
+    
+}
+.project_title h3{
+    font-size: 18px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-weight: bold;
+    margin-bottom: 16px;
+    
+}
+.web-site{
+    margin-left: 380px;
+    margin-top: 30px;
+    color: #384354;
+    
+}
+.web-site h3{
+    font-size: 18px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    margin-bottom: 16px;
+    font-weight: bold;
+}
+.examples button{
+    margin-left: 380px;
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: #63b5ae;
+    padding: 10px 25px;
+    color: #fff;
+    font-size: 18px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+}
+.price{
+    width: 100%;
+    height: 650px;     
+}
+.price h2{
+    margin-top: 80px;
+    text-align: center;
+    color: #1c2534;
+    font-size: 25px;
+    font-family: "Franklin Gothic Medium", sans-serif; 
+    font-weight: bold;
+}
+.price h3{
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-size: 18px;
+    color: #384354;
+    font-weight: bold;
+    margin-left: 600px;
+    margin-top: 60px;
+}
+.selector{
+    width: 660px;
+    height: 45px;
+    margin-left: 600px;
+    background-color: #eeeeee;
+    color: #737373;
+    font-family: "Franklin Gothic Medium", sans-serif;
+}
+.price img{
+    display: block;
+    margin-left: 600px;
+    margin-top: 40px;
+    width: 660px;
+}
+.price p{
+    display: block;
+    margin-top: 25px;
+    margin-left: 600px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-size: 14px;
+    color: #384354;
+}
+.statistics{
+   height: 520px;
+   width: 100%;   
+   background: url(../img/stat-bg.jpg) no-repeat;
+}
+
+.stat-ul{
+    float: left;
+    margin-top: 80px;
+    padding-left: 300px;
+    
+}
+.stat-ul li{
+    text-align: center;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-size: 14px;
+    color: #384354;
+    float: left;
+    margin-right: 240px;   
+}
+.stat-ul li h2{
+    font-size: 30px;
+    margin-top: 30px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+.comments{
+    height: 595px;
+    width: 100%;
+}
+.fotka{
+    display: block;
+    margin: 50px auto 0px auto;
+}
+.comment{
+    margin-top: 20px;
+    font-size: 16px;
+    line-height: 40px;
+    text-align: center;
+    color: #384354;
+    font-family: "Franklin Gothic Medium", sans-serif;
+}
+.tochki{
+    float: left;
+    margin-top: 50px;
+    padding-left: 925px;   
+}
+.tochki li{
+    float: left;
+    margin-right: 15px;
+}
+.contacts{
+    width: 100%;
+    height: 810px;
+    background: url(../img/bg-contacts.jpg) no-repeat;
+}
+.header-contacts{
+    padding-top: 107px;
+    text-align: center;
+    font-family: "Arial", sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    color: #fff;
+}
+.some-text{
+    margin-top: 33px;
+    text-align: center;
+    color: #fff;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    font-size: 16px;
+}
+.contacts-ul{
+    float: left;
+    margin-top: 45px;
+    padding-left: 690px;
+}
+
+.contacts-ul li{
+    float: left;
+    text-align: center;
+    margin-right: 70px;
+}
+.contacts p{
+    margin-top: 20px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    color: #fff;
+  
+}
+.send-message{
+    float: left;
+    text-align: center;
+    margin-top: 40px;
+    color: #fff;
+}
+
