--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,7 +9,6 @@ nav{
     font-family: "Arial", sans-serif;
     line-height: 60px;
     font-size: 28px;
-    padding-left: 388px;
     color: #fff;
     float: left;
     -webkit-animation: comming 2s ease;
@@ -18,12 +17,11 @@ nav{
 }
 .menu{
     float: left;
-    padding-left: 432px;
 }
 .menu li{
     float: left;
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
     font-family: "Arial", sans-serif;
     margin-right: 40px;
     line-height: 60px;
@@ -38,6 +36,7 @@ nav{
     color: #fff;
     transform: scale(1);
     display: inline-block;
+    text-decoration: none;
 }
 .menu li a:visited{
     color: #fff;    
@@ -48,28 +47,29 @@ nav{
 .menu li a:active{
     transform: scale(1.5);
 }
+.white-btn:visited{
+    color: white;
+}
 
-.main{
+main{
     width: 100%;
     height: 100%;
     background: url(../img/boy.png) 90% 100%/auto 85% no-repeat, url(../img/bg.jpg) center/cover no-repeat;
     
 }
 .title_container{
+    color: #2c384a;
     float: left;
-    margin-top: 435px;
-    margin-left: 404px;
     text-align: center;
-    opacity: 0;
+    /**opacity: 0;
     -webkit-animation: titleComing 1s ease forwards;
     -o-animation: titleComing 1s ease forwards;
     animation: titleComing 1s ease forwards;
     -webkit-animation-delay: 1.2s;
     -o-animation-delay: 1.2s;
-    animation-delay: 1.2s;
+    animation-delay: 1.2s;**/
 }
 .title_container h1{
-    color: #2c384a;
     font-size: 60px;
     font-family: "Arial", sans-serif;
     font-weight: bold;
