--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,6 +61,8 @@ main{
     color: #2c384a;
     float: left;
     text-align: center;
+    margin-top: 50%;
+
     /**opacity: 0;
     -webkit-animation: titleComing 1s ease forwards;
     -o-animation: titleComing 1s ease forwards;
@@ -106,7 +108,7 @@ main{
 }
 .about {
     width: 100%;
-    height: 720px;
+    height: 100%;
     background-color: #fcfdfd;
     
 }
@@ -151,7 +153,7 @@ main{
     font-family: "Franklin Gothic Medium", sans-serif;
     font-size: 25px;
     color: #7b7c88;
-    margin: 60px auto 0px auto;
+    margin: 60px auto 40px auto;
     padding-left: 35px;
     padding-right: 15px;
     background: url(../img/icon.png) 5% 50%/auto 70% no-repeat;
@@ -167,25 +169,25 @@ main{
 }
 
 .skills{
+    
     width: 100%;
     height: 520px;
-    background: url(../img/bg-skills.jpg) no-repeat;
+    background: url(../img/bg-skills.jpg) center/auto no-repeat;
 }
 .skills-ul{
     float: left;
     margin-top: 80px;
-    padding-left: 416px; 
+     
 }
 
 
 .skills-ul li{
+    width: 25%;
     text-align: center;
-    width: 220px;
     font-family: "Franklin Gothic Medium", sans-serif;
     font-size: 14px;
     color: #626a77;
     float: left;
-    margin-right: 80px;
     opacity: 0;
     -webkit-animation: skillsComing 1.2s ease forwards;
     -o-animation: skillsComing 1.2s ease forwards;
@@ -202,9 +204,6 @@ main{
     margin-bottom: 15px;
     color: #cf7600;
 } 
-.skills li {
-    
-}
 
 .examples{
     width: 100%;
@@ -227,7 +226,6 @@ main{
 }
 
 .client{
-    margin-left: 380px;
     margin-top: 40px;
     padding-right: 165px;
     color: #384354;
@@ -255,7 +253,6 @@ main{
     
 }
 .web-site{
-    margin-left: 380px;
     margin-top: 30px;
     color: #384354;
     
@@ -267,7 +264,6 @@ main{
     font-weight: bold;
 }
 .examples button{
-    margin-left: 380px;
     margin-top: 20px;
     border-radius: 5px;
     background-color: #63b5ae;
