--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@ nav{
     height: 60px;
     background-color: #344051;
     position: fixed;
+    z-index: 5;
 }
 
 .logo{
@@ -61,18 +62,18 @@ main{
     color: #2c384a;
     float: left;
     text-align: center;
-    margin-top: 50%;
+    width: 100%;
 
-    /**opacity: 0;
+    opacity: 0;
     -webkit-animation: titleComing 1s ease forwards;
     -o-animation: titleComing 1s ease forwards;
     animation: titleComing 1s ease forwards;
     -webkit-animation-delay: 1.2s;
     -o-animation-delay: 1.2s;
-    animation-delay: 1.2s;**/
+    animation-delay: 1.2s;
 }
 .title_container h1{
-    font-size: 60px;
+    font-size: 72px;
     font-family: "Arial", sans-serif;
     font-weight: bold;
 }
@@ -106,6 +107,30 @@ main{
 .title_container input:active{
     transform: scale(1.3);
 }
+@media (max-width:991px){
+    .title_container, .title_container h4, .title_container input{
+        color: white;
+        position: relative;
+        z-index: 3;
+    }
+    .title_container input{
+        border: 2px solid white;
+    }
+    .main{
+        position: relative;
+    }
+    .main::after{
+        content: "";
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        background: rgba(0,0,0,0.4);
+        z-index: 1;
+    }
+}
+
 .about {
     width: 100%;
     height: 100%;
@@ -490,7 +515,7 @@ main{
        opacity: 0;
     }
     to{
-       margin-left: 404px;
+       margin-left: 0px;
         opacity: 1;
     }
 }
