--- a/src/css/style.css
+++ b/src/css/style.css
@@ -232,7 +232,8 @@ main{
 
 .examples{
     width: 100%;
-    height: 1120px;
+    height: 130%;
+
 }
 .examples p{
     font-family: "Calibri", sans-serif;
@@ -245,6 +246,7 @@ main{
     font-size: 20px;
 }
 .workplace{
+    
     display: block;
     margin: 40px auto 0px auto;
     height: 590px;
@@ -252,10 +254,7 @@ main{
 
 .client{
     margin-top: 40px;
-    padding-right: 165px;
-    color: #384354;
-   float: left;
-    
+    color: #384354;   
 }
 
 .client h3{
@@ -278,6 +277,7 @@ main{
     
 }
 .web-site{
+    
     margin-top: 30px;
     color: #384354;
     
@@ -306,8 +306,9 @@ main{
 }
 
 .price{
-    width: 100%;
-    height: 650px;     
+    width: 975px;
+    box-shadow: 5px 5px 3px grey;
+    height: 90%;     
 }
 .price h2{
     margin-top: 80px;
@@ -322,30 +323,37 @@ main{
     font-size: 18px;
     color: #384354;
     font-weight: bold;
-    margin-left: 600px;
     margin-top: 60px;
 }
 .selector{
     width: 660px;
     height: 45px;
-    margin-left: 600px;
     background-color: #eeeeee;
     color: #737373;
     font-family: "Franklin Gothic Medium", sans-serif;
 }
 .price img{
     display: block;
-    margin-left: 600px;
     margin-top: 40px;
     width: 660px;
 }
 .price p{
     display: block;
     margin-top: 25px;
-    margin-left: 600px;
     font-family: "Franklin Gothic Medium", sans-serif;
     font-size: 14px;
     color: #384354;
+}
+.price button{
+    
+    margin-top: 20px;
+    border-radius: 5px;
+    background-color: #63b5ae;
+    padding: 10px 25px;
+    color: #fff;
+    font-size: 18px;
+    font-family: "Franklin Gothic Medium", sans-serif;
+    transform: scale(1);
 }
 .statistics{
    height: 520px;
