--- a/visit/css/style.css
+++ b/visit/css/style.css
@@ -44,18 +44,16 @@ nav{
     display: inline-block;
     text-decoration: none;
 }
-.menu li a:visited{
-    color: #fff;    
-}
-.menu li a:hover{
+
+.navbar .navbar-nav > li > a:hover,
+.navbar .navbar-nav > li > a:focus {
     color: #f29417;
 }
-.menu li a:active{
+.nav-link:active{
+    color: #f29417;
     transform: scale(1.5);
 }
-.white-btn{
-    color: white;
-}
+
 @keyframes comming{
     from{
         opacity: 0;
@@ -130,7 +128,7 @@ main{
     color: #fff;
     border-radius: 5px;
     background: none;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     padding: 0px 16px;
     transition: all 0.2s;
@@ -181,14 +179,15 @@ main{
     }
 
 .about{
-    min-height: 800px;
+    height: 830px;
+    min-height: 600px;
 }
 .about p{
     color: #38485b;
     font-family: Arial, sans-serif;
     font-size: 14px;
 }
-.about button{
+.about a{
    
     background: none;
     line-height 45px;
@@ -200,6 +199,7 @@ main{
     background: url(../img/icon.png) 5% 50%/auto 70% no-repeat;
     border: 2px solid;
     border-radius: 5px;
+    text-decoration: none;
 }
 
 
@@ -222,17 +222,17 @@ main{
     font-weight: bold;
     margin-top: 30px;
     margin-bottom: 15px;
-    color: white;
+    color: #ff7d20;
 }
 .skills p{
     font-family: "Franklin Gothic Medium", sans-serif;
-    font-size: 14px;
-    color: white;
-    font-weight: bold;
+    font-size: 16px;
+    color: #ff7d20;
+    
 }
 
 .examples{
-    height: 1150px;
+    min-height: 1050px;
 }
 .examples p{
     font-family: Calibri, sans-serif;
@@ -258,16 +258,24 @@ main{
     font-size: 18px;
     font-family: "Franklin Gothic Medium", sans-serif;
     transform: scale(1);
+    
+}
+.carousel-control-prev{
+    max-height: 600px;
+}
+.carousel-control-next{
+    max-height: 600px;
 }
 .site:hover{
     background: aqua;
 }
 .site:active{
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 .price{
-    height: 90%;
-    min-height: 900px;
+    height: 40%;
+    min-height: 820px;
+   
 }
 .price-form{    
     height: 800px;
@@ -318,13 +326,13 @@ select{
     background-attachment: fixed;
 }
 .statistics h2{
-    color: white;
+    color: #ff7d20;
     font-size: 28px;
     font-weight: bold;  
 }
 .statistics p{
-    color: white;
-    font-size: 12px;
+    color: #ff7d20;
+    font-size: 14px;
 }
 .animation-custom-ul{
     opacity: 0;
@@ -334,17 +342,21 @@ select{
     transition: opacity 1s;
 }
 .comments{
-    height: 60%;
-    min-height: 600px;
-    background-color: red;
+    height: 20%;
+    min-height: 550px;
+    background-color: #d3d3d3;
 }
-.custom_tochki{
-    margin-right: 7px;
+.carousel-indicators .active{
+    background-color: blue;
 }
+
+
 .contacts{
+    height: 50%;
     background: url(../img/bg-contacts.jpg) center/cover no-repeat;
-    min-height: 840px;
+    min-height: 880px;
 }
+
 .contacts_header{
     color:#fff;
     font-family: "Franklin Gothic Medium", sans-serif;
